[gd_scene load_steps=2 format=3 uid="uid://gd3fke41sqe5"]

[ext_resource type="Script" path="res://GameOver.gd" id="1_y7g2t"]

[node name="GameOver" type="ColorRect"]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_y7g2t")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "GAME OVER
:("
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Load Game"

[node name="StartOverButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Reset Progress?"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Quit"

[node name="Tips" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Tip: "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartOverButton" to="." method="_on_start_over_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
